--- a/dev.yml
+++ b/dev.yml
@@ -6,5 +6,6 @@ up:
       modules: on
       tools:
         - google.golang.org/protobuf/cmd/protoc-gen-go@latest
+        - google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
   - packages:
       - protoc
